<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bigmikehoncho.com.riskdicesimulator.MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_attacker_unit_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/attacker"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewTitles"
                    android:text="@string/attacker_header" />

                <NumberPicker
                    android:id="@+id/numberPicker_attackerUnitCount"
                    style="@style/MyNumberPicker" />

                <TextView
                    style="@style/TextViewTitles"
                    android:layout_marginTop="12dp"
                    android:text="@string/safety"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_lock_black_18dp"
                    android:drawableEnd="@drawable/ic_lock_black_18dp" />

                <NumberPicker
                    android:id="@+id/numberPicker_attackerSafety"
                    style="@style/MyNumberPicker" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_defender_unit_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/defender"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewTitles"
                    android:text="@string/defender_header" />

                <NumberPicker
                    android:id="@+id/numberPicker_defenderUnitCount"
                    style="@style/MyNumberPicker" />

                <TextView
                    style="@style/TextViewTitles"
                    android:layout_marginTop="12dp"
                    android:text="@string/safety"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_lock_black_18dp"
                    android:drawableEnd="@drawable/ic_lock_black_18dp" />

                <NumberPicker
                    android:id="@+id/numberPicker_defenderSafety"
                    style="@style/MyNumberPicker" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn_resolve_attack"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resolve_attack"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
