<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dialog_margins">

    <ScrollView
        android:id="@+id/layout_scroll_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <include android:id="@+id/layout_attack" layout="@layout/content_attack"/>

    </ScrollView>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_scroll_result"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_quick_complete"
            style="?metaButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/attack_complete"
            android:textSize="16sp"/>

        <ToggleButton
            android:id="@+id/btn_toggle_attack"
            style="?metaButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:disabledAlpha="0.5"
            android:checked="true"
            android:textOff="@string/attack_continue"
            android:textOn="@string/attack_pause" />

    </LinearLayout>

</RelativeLayout>
